--- a/godot/index.html
+++ b/godot/index.html
@@ -5,8 +5,8 @@
         a:hover {text-decoration: underline}
         a {color: #C0C0C0; text-decoration: none}
         img {vertical-align: center}
-        .editor_plugin {color: #C04040}
     </style>
+    <title>Godot Classes (3.2)</title>
 </head>
 <body>
 <pre>
@@ -29,7 +29,7 @@
 
     <img src="icons/icon_vector2.svg"> <a href="api/#Vector2" target="_blank">Vector2</a>
     <img src="icons/icon_rect2.svg"> <a href="api/#Rect2" target="_blank">Rect2</a>
-    <img src="icons/icon_transform_2_d.svg"> <a href="api/#Transform2D" target="_blank">Transform2D</a>
+    <img src="icons/icon_transform_2_D.svg"> <a href="api/#Transform2D" target="_blank">Transform2D</a>
     
     <img src="icons/icon_vector2.svg"> <a href="api/#Vector3" target="_blank">Vector3</a>
     <img src="icons/icon_plane.svg"> <a href="api/#Plane" target="_blank">Plane</a>
@@ -75,14 +75,11 @@
                             <img src="icons/icon_h_box_container.svg"> <a href="api/#HBoxContainer" target="_blank">HBoxContainer</a>
                             <img src="icons/icon_v_box_container.svg"> <a href="api/#VBoxContainer" target="_blank">VBoxContainer</a>
                         <img src="icons/icon_center_container.svg"> <a href="api/#CenterContainer" target="_blank">CenterContainer</a>
-                        <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorProperty" target="_blank">EditorProperty</a>
                         <img src="icons/icon_graph_node.svg"> <a href="api/#GraphNode" target="_blank">GraphNode</a>
                         <img src="icons/icon_grid_container.svg"> <a href="api/#GridContainer" target="_blank">GridContainer</a>
                         <img src="icons/icon_margin_container.svg"> <a href="api/#MarginContainer" target="_blank">MarginContainer</a>
                         <img src="icons/icon_panel_container.svg"> <a href="api/#PanelContainer" target="_blank">PanelContainer</a>
-                            <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#ScriptEditor" target="_blank">ScriptEditor</a>
                         <img src="icons/icon_scroll_container.svg"> <a href="api/#ScrollContainer" target="_blank">ScrollContainer</a>
-                            <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorInspector" target="_blank">EditorInspector</a>
                         <img src="icons/icon_arrow_down.svg"> <a href="api/#SplitContainer" target="_blank">SplitContainer</a>
                             <img src="icons/icon_h_split_container.svg"> <a href="api/#HSplitContainer" target="_blank">HSplitContainer</a>
                             <img src="icons/icon_v_split_container.svg"> <a href="api/#VSplitContainer" target="_blank">VSplitContainer</a>
@@ -101,11 +98,8 @@
                         <img src="icons/icon_window_dialog.svg"> <a href="api/#WindowDialog" target="_blank">WindowDialog</a>
                             <img src="icons/icon_accept_dialog.svg"> <a href="api/#AcceptDialog" target="_blank">AcceptDialog</a>
                                 <img src="icons/icon_confirmation_dialog.svg"> <a href="api/#ConfirmationDialog" target="_blank">ConfirmationDialog</a>
-                                    <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorFileDialog" target="_blank">EditorFileDialog</a>
                                     <img src="icons/icon_file_dialog.svg"> <a href="api/#FileDialog" target="_blank">FileDialog</a>
-                                    <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#ScriptCreateDialog" target="_blank">ScriptCreateDialog</a>
                     <img src="icons/icon_arrow_down.svg"> <a href="api/#Range" target="_blank">Range</a>
-                        <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorSpinSlider" target="_blank">EditorSpinSlider</a>
                         <img src="icons/icon_progress_bar.svg"> <a href="api/#ProgressBar" target="_blank">ProgressBar</a>
                         <img src="icons/icon_arrow_down.svg"> <a href="api/#ScrollBar" target="_blank">ScrollBar</a>
                             <img src="icons/icon_h_scroll_bar.svg"> <a href="api/#HScrollBar" target="_blank">HScrollBar</a>
@@ -250,10 +244,6 @@
             <img src="icons/icon_audio_stream_player.svg"> <a href="api/#AudioStreamPlayer" target="_blank">AudioStreamPlayer</a>
             <img src="icons/icon_canvas_layer.svg"> <a href="api/#CanvasLayer" target="_blank">CanvasLayer</a>
                 <img src="icons/icon_parallax_background.svg"> <a href="api/#ParallaxBackground" target="_blank">ParallaxBackground</a>
-            <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorFileSystem" target="_blank">EditorFileSystem</a>
-            <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorInterface" target="_blank">EditorInterface</a>
-            <img src="icons/icon_editor_plugin.svg"> <a class="editor_plugin" href="api/#EditorPlugin" target="_blank">EditorPlugin</a>
-            <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorResourcePreview" target="_blank">EditorResourcePreview</a>
             <img src="icons/icon_h_t_t_p_request.svg"> <a href="api/#HTTPRequest" target="_blank">HTTPRequest</a>
             <img src="icons/icon_resource_preloader.svg"> <a href="api/#InstancePlaceholder" target="_blank">InstancePlaceholder</a>
             <img src="icons/icon_object.svg"> <a href="api/#ResourcePreloader" target="_blank">ResourcePreloader</a>
@@ -329,8 +319,6 @@
                 <img src="icons/icon_curve_2d.svg"> <a href="api/#Curve2D" target="_blank">Curve2D</a>
                 <img src="icons/icon_curve_3d.svg"> <a href="api/#Curve3D" target="_blank">Curve3D</a>
                 <img src="icons/icon_dynamic_font_data.svg"> <a href="api/#DynamicFontData" target="_blank">DynamicFontData</a>
-                <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorSettings" target="_blank">EditorSettings</a>
-                <img src="icons/icon_editor_plugin.svg"> <a class="editor_plugin" href="api/#EditorSpatialGizmoPlugin" target="_blank">EditorSpatialGizmoPlugin</a>
                 <img src="icons/icon_environment.svg"> <a href="api/#Environment" target="_blank">Environment</a>
                 <img src="icons/icon_arrow_down.svg"> <a href="api/#Font" target="_blank">Font</a>
                     <img src="icons/icon_bitmap_font.svg"> <a href="api/#BitmapFont" target="_blank">BitmapFont</a>
@@ -553,7 +541,6 @@
                 <img src="icons/icon_object.svg"> <a href="api/#MobileVRInterface" target="_blank">MobileVRInterface</a>
             <img src="icons/icon_object.svg"> <a href="api/#AStar" target="_blank">AStar</a>
             <img src="icons/icon_object.svg"> <a href="api/#AStar2D" target="_blank">AStar2D</a>
-            <img src="icons/icon_editor_plugin.svg"> <a class="editor_plugin" href="api/#AnimationTrackEditPlugin" target="_blank">AnimationTrackEditPlugin</a>
             <img src="icons/icon_object.svg"> <a href="api/#AudioEffectInstance" target="_blank">AudioEffectInstance</a>
                 <img src="icons/icon_object.svg"> <a href="api/#AudioEffectSpectrumAnalyzerInstance" target="_blank">AudioEffectSpectrumAnalyzerInstance</a>
             <img src="icons/icon_object.svg"> <a href="api/#AudioStreamPlayback" target="_blank">AudioStreamPlayback</a>
@@ -564,15 +551,6 @@
             <img src="icons/icon_object.svg"> <a href="api/#ConfigFile" target="_blank">ConfigFile</a>
             <img src="icons/icon_object.svg"> <a href="api/#Crypto" target="_blank">Crypto</a>
             <img src="icons/icon_folder.svg"> <a href="api/#Directory" target="_blank">Directory</a>
-            <img src="icons/icon_editor_plugin.svg"> <a class="editor_plugin" href="api/#EditorExportPlugin" target="_blank">EditorExportPlugin</a>
-            <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorFeatureProfile" target="_blank">EditorFeatureProfile</a>
-            <img src="icons/icon_editor_plugin.svg"> <a class="editor_plugin" href="api/#EditorInspectorPlugin" target="_blank">EditorInspectorPlugin</a>
-            <img src="icons/icon_editor_plugin.svg"> <a class="editor_plugin" href="api/#EditorResourceConversionPlugin" target="_blank">EditorResourceConversionPlugin</a>
-            <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorResourcePreviewGenerator" target="_blank">EditorResourcePreviewGenerator</a>
-            <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorSceneImporter" target="_blank">EditorSceneImporter</a>
-                <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorSceneImporterAssimp" target="_blank">EditorSceneImporterAssimp</a>
-            <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorScenePostImport" target="_blank">EditorScenePostImport</a>
-            <img src="icons/icon_editor_plugin.svg"> <a class="editor_plugin" href="api/#EditorScript" target="_blank">EditorScript</a>
             <img src="icons/icon_object.svg"> <a href="api/#EncodedObjectAsID" target="_blank">EncodedObjectAsID</a>
             <img src="icons/icon_object.svg"> <a href="api/#Expression" target="_blank">Expression</a>
             <img src="icons/icon_file.svg"> <a href="api/#File" target="_blank">File</a>
@@ -610,14 +588,12 @@
             <img src="icons/icon_object.svg"> <a href="api/#ResourceFormatLoader" target="_blank">ResourceFormatLoader</a>
             <img src="icons/icon_object.svg"> <a href="api/#ResourceFormatSaver" target="_blank">ResourceFormatSaver</a>
             <img src="icons/icon_arrow_down.svg"> <a href="api/#ResourceImporter" target="_blank">ResourceImporter</a>
-                <img src="icons/icon_editor_plugin.svg"> <a class="editor_plugin" href="api/#EditorImportPlugin" target="_blank">EditorImportPlugin</a>
             <img src="icons/icon_object.svg"> <a href="api/#ResourceInteractiveLoader" target="_blank">ResourceInteractiveLoader</a>
             <img src="icons/icon_object.svg"> <a href="api/#SceneState" target="_blank">SceneState</a>
             <img src="icons/icon_object.svg"> <a href="api/#SceneTreeTimer" target="_blank">SceneTreeTimer</a>
             <img src="icons/icon_object.svg"> <a href="api/#Semaphore" target="_blank">Semaphore</a>
             <img src="icons/icon_object.svg"> <a href="api/#SkinReferences" target="_blank">SkinReferences</a>
             <img src="icons/icon_arrow_down.svg"> <a href="api/#SpatialGizmo" target="_blank">SpatialGizmo</a>
-                <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorSpatialGizmo" target="_blank">EditorSpatialGizmo</a>
             <img src="icons/icon_object.svg"> <a href="api/#SpatialVelocityTracker" target="_blank">SpatialVelocityTracker</a>
             <img src="icons/icon_arrow_down.svg"> <a href="api/#StreamPeer" target="_blank">StreamPeer</a>
                 <img src="icons/icon_object.svg"> <a href="api/#StreamPeerBuffer" target="_blank">StreamPeerBuffer</a>
@@ -637,9 +613,6 @@
         # Other Engine Classes
 
         <img src="icons/icon_object.svg"> <a href="api/#ARVRPositionalTracker" target="_blank">ARVRPositionalTracker</a>
-        <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorFileSystemDirectory" target="_blank">EditorFileSystemDirectory</a>
-        <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorSelection" target="_blank">EditorSelection</a>
-        <img src="icons/icon_object.svg"> <a class="editor_plugin" href="api/#EditorVCSInterface" target="_blank">EditorVCSInterface</a>
         <img src="icons/icon_object.svg"> <a href="api/#JSONRPC" target="_blank">JSONRPC</a>
         <img src="icons/icon_object.svg"> <a href="api/#MainLoop" target="_blank">MainLoop</a>
             <img src="icons/icon_object.svg"> <a href="api/#SceneTree" target="_blank">SceneTree</a>
@@ -656,14 +629,13 @@
     <img src="icons/icon_arrow_right.svg"> <a href="api/#AudioServer" target="_blank">AudioServer</a>
     <img src="icons/icon_arrow_right.svg"> <a href="api/#CameraServer" target="_blank">CameraServer</a>
     <img src="icons/icon_arrow_right.svg"> <a href="api/#ClassDB" target="_blank">ClassDB</a>
-    <img src="icons/icon_arrow_right.svg"> <a class="editor_plugin" href="api/#EditorNavigationMeshGenerator" target="_blank">EditorNavigationMeshGenerator</a>
     <img src="icons/icon_arrow_right.svg"> <a href="api/#Engine" target="_blank">Engine</a>
     <img src="icons/icon_arrow_right.svg"> <a href="api/#Geometry" target="_blank">Geometry</a>
     <img src="icons/icon_arrow_right.svg"> <a href="api/#IP" target="_blank">IP</a>
     <img src="icons/icon_arrow_right.svg"> <a href="api/#Input" target="_blank">Input</a>
     <img src="icons/icon_arrow_right.svg"> <a href="api/#InputMap" target="_blank">InputMap</a>
     <img src="icons/icon_arrow_right.svg"> <a href="api/#JSON" target="_blank">JSON</a>
-    <img src="icons/icon_arrow_right.svg"> <a href="api/#Marshals" target="_blank">Marshals</a>
+    <img src="icons/icon_arrow_right.svg"> <a href="api/#Marshalls" target="_blank">Marshalls</a>
     <img src="icons/icon_arrow_right.svg"> <a href="api/#OS" target="_blank">OS</a>
     <img src="icons/icon_arrow_right.svg"> <a href="api/#Performance" target="_blank">Performance</a>
     <img src="icons/icon_arrow_right.svg"> <a href="api/#Physics2DServer" target="_blank">Physics2DServer</a>
