--- a/lighthouse/resume.html
+++ b/lighthouse/resume.html
@@ -95,6 +95,9 @@
       </p>
       <p>
         <a href="tel:2501234567">250-123-4567</a>
+      </p>
+      <p>
+        <a href="resume.pdf" download>Download Resume</a>
       </p> 
     </footer>
 
