add bullet points

--- a/lighthouse/resume.html
+++ b/lighthouse/resume.html
@@ -54,35 +54,35 @@
         <h3>JavaScript Developer</h3>
         <h4>JavaScript Corp.</h4>
         <h4>2024 - Present</h4>
-        <p>
-          Copied desk plow via hackathon affiliate. 
-          Segment ecosystem lead generation follow up and proximity API. 
-          Best filt dev environment ramp up traction which optimized their SEO retainer and mobile first pipeline.
-          Streamlined optimized kick off usebility bandwidth.
-          EOD queued user personas to lead generation API for game plan pushes and envelope ROIs.
-          Look and feel strategic partners for heads down on your plate digests.
-        </p>
+        <ul>
+          <li>Copied desk plow via hackathon affiliate.</li> 
+          <li>Segment ecosystem lead generation follow up and proximity API. </li> 
+          <li>Best filt dev environment ramp up traction which optimized their SEO retainer and mobile first pipeline.</li> 
+          <li>Streamlined optimized kick off usebility bandwidth.</li> 
+          <li>EOD queued user personas to lead generation API for game plan pushes and envelope ROIs.</li> 
+          <li>Look and feel strategic partners for heads down on your plate digests.</li> 
+        </ul>
       </article>
       <article>
         <h3>CSS Coder</h3>
         <h4>CSS Inc.</h4>
         <h4>2023 - 2024</h4>
-        <p>
-          B2B ramp up mission statements for cohesive deliverables CTA.
-          Reached fluid EOD's for follow up targets and bandwidth proximity with organic pipeline OLA fesh outs.
-          High level client facing synergy mobile first implementation value creation.
-          Platform value propositions with dev environment whiteboards.
-        </p>
+        <ul>
+          <li>B2B ramp up mission statements for cohesive deliverables CTA.</li> 
+          <li>Reached fluid EOD's for follow up targets and bandwidth proximity with organic pipeline OLA fesh outs.</li> 
+          <li>High level client facing synergy mobile first implementation value creation.</li> 
+          <li>Platform value propositions with dev environment whiteboards.</li> 
+        </ul>
       </article>
       <article>
         <h3>HTML Monkey</h3>
         <h4>HTML LLC.</h4>
         <h4>2022 - 2023</h4>
-        <p>
-          Leveraged gamma plans for mock up EOD's.
-          Transplanted target audiences to next level post launch next step API's.
-          ROI fluid game chager which was prostponed due to responsive behavior.
-          Lean innovation strategic push the envelope usability third party channel quick desk hot link.
+        <ul>
+          <li>Leveraged gamma plans for mock up EOD's.</li>
+          <li>Transplanted target audiences to next level post launch next step API's.</li>
+          <li>ROI fluid game chager which was prostponed due to responsive behavior.</li>
+          <li>Lean innovation strategic push the envelope usability third party channel quick desk hot link.</li>
         </p>
       </article>
     </section>
