--- a/lighthouse/resume.html
+++ b/lighthouse/resume.html
@@ -1,104 +1,114 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <link rel="preconnect" href="https://fonts.googleapis.com"> 
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">  
+      <link rel="stylesheet" href="theme.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="#about">about</a>
-        <a href="#skills">skills</a>
-        <a href="#experience">experience</a>
-        <a href="#contact">contact</a>
-      </nav>
-      <h1>John Wankiewicz</h1>
-      <h4>Web Ninja</h4>
-      <img src="coffee_face.jpeg" alt="John Wankiewicz's profile image">
+    <nav>
+      <a href="#about">about</a>
+      <a href="#skills">skills</a>
+      <a href="#experience">experience</a>
+      <a href="#contact">contact</a>
+    </nav>
+    <header class="bg-a">
+      <div class="container">
+        <h1>John Wankiewicz</h1>
+        <h4>Web Ninja</h4>
+        <img src="coffee_face.jpeg" alt="John Wankiewicz's profile image">
+      </div>
     </header>
 
     <section id="about">
-      <h2>about</h2>
-      <h4>who doesn't love a web ninja</h4>
-      <p>
-        Born in a dimention where space & time does not exist, John 'Web Ninja' Wankiewicz grew up Scarborough, Ontario to become one the of the most powerful web ninjas of all time. 
-        With hand down post launch B3B lean retaning and segment value added target audtio ROI's, John's game plan synergy value added follow up will produce lead generation and good fit scoping out of traction for engagement digest.
-        Mobile first OLA proximity consolidated, heads down next level responsive behavior and follow up ramp down kick offs, he is what you need for your strategic engagement conversions. 
-      </p>
-      <p><em>Honestly, I've never seen a cooler web ninja that this guy.</em> -- The Queen</p>
+      <div class="container">
+        <h2>about</h2>
+        <h4>who doesn't love a web ninja</h4>
+        <p>
+          Born in a dimention where space & time does not exist, John 'Web Ninja' Wankiewicz grew up Scarborough, Ontario to become one the of the most powerful web ninjas of all time. 
+          With hand down post launch B3B lean retaning and segment value added target audtio ROI's, John's game plan synergy value added follow up will produce lead generation and good fit scoping out of traction for engagement digest.
+          Mobile first OLA proximity consolidated, heads down next level responsive behavior and follow up ramp down kick offs, he is what you need for your strategic engagement conversions. 
+        </p>
+        <p><em>Honestly, I've never seen a cooler web ninja that this guy.</em> -- The Queen</p>
+      </div>
     </section>
 
-    <section id="skills">
-      <h2>skills</h2>
-      <p>
-        HTML <meter min="1" max="10" value="10">tests</meter> 100%
-      </p>
-      <p>
-        CSS <meter min="1" max="10" value="10">tests</meter> 100%
-      </p>
-      <p>
-        JavaScript <meter min="1" max="10" value="10">tests</meter> 100%
-      </p>
-      <p>
-        XML <meter min="1" max="10" value="10">tests</meter> 100%
-      </p>
-      <p>
-        SVG <meter min="1" max="10" value="10">tests</meter> 100%
-      </p>
-      <p>
-        jQuery <meter min="1" max="10" value="NaN">tests</meter> 0%
-      </p>
+    <section id="skills" class="bg-a">
+      <div class="container">
+        <h2>skills</h2>
+        <p>
+          HTML <meter min="1" max="10" value="10">tests</meter> 100%
+        </p>
+        <p>
+          CSS <meter min="1" max="10" value="10">tests</meter> 100%
+        </p>
+        <p>
+          JavaScript <meter min="1" max="10" value="10">tests</meter> 100%
+        </p>
+        <p>
+          XML <meter min="1" max="10" value="10">tests</meter> 100%
+        </p>
+        <p>
+          SVG <meter min="1" max="10" value="10">tests</meter> 100%
+        </p>
+        <p>
+          jQuery <meter min="1" max="10" value="NaN">tests</meter> 0%
+        </p>
+      </div>
     </section>
 
     <section id="experience">
-      <h2>experience</h2>
-      <article>
-        <h3>JavaScript Developer</h3>
-        <h4>JavaScript Corp.</h4>
-        <h4>2024 - Present</h4>
-        <ul>
-          <li>Copied desk plow via hackathon affiliate.</li> 
-          <li>Segment ecosystem lead generation follow up and proximity API. </li> 
-          <li>Best filt dev environment ramp up traction which optimized their SEO retainer and mobile first pipeline.</li> 
-          <li>Streamlined optimized kick off usebility bandwidth.</li> 
-          <li>EOD queued user personas to lead generation API for game plan pushes and envelope ROIs.</li> 
-          <li>Look and feel strategic partners for heads down on your plate digests.</li> 
-        </ul>
-      </article>
-      <article>
-        <h3>CSS Coder</h3>
-        <h4>CSS Inc.</h4>
-        <h4>2023 - 2024</h4>
-        <ul>
-          <li>B2B ramp up mission statements for cohesive deliverables CTA.</li> 
-          <li>Reached fluid EOD's for follow up targets and bandwidth proximity with organic pipeline OLA fesh outs.</li> 
-          <li>High level client facing synergy mobile first implementation value creation.</li> 
-          <li>Platform value propositions with dev environment whiteboards.</li> 
-        </ul>
-      </article>
-      <article>
-        <h3>HTML Monkey</h3>
-        <h4>HTML LLC.</h4>
-        <h4>2022 - 2023</h4>
-        <ul>
-          <li>Leveraged gamma plans for mock up EOD's.</li>
-          <li>Transplanted target audiences to next level post launch next step API's.</li>
-          <li>ROI fluid game chager which was prostponed due to responsive behavior.</li>
-          <li>Lean innovation strategic push the envelope usability third party channel quick desk hot link.</li>
-        </p>
-      </article>
+      <div class="container">
+        <h2>experience</h2>
+        <article>
+          <h3>JavaScript Developer</h3>
+          <h4>JavaScript Corp.</h4>
+          <h4>2024 - Present</h4>
+          <ul>
+            <li>Copied desk plow via hackathon affiliate.</li> 
+            <li>Segment ecosystem lead generation follow up and proximity API. </li> 
+            <li>Best filt dev environment ramp up traction which optimized their SEO retainer and mobile first pipeline.</li> 
+            <li>Streamlined optimized kick off usebility bandwidth.</li> 
+            <li>EOD queued user personas to lead generation API for game plan pushes and envelope ROIs.</li> 
+            <li>Look and feel strategic partners for heads down on your plate digests.</li> 
+          </ul>
+        </article>
+        <article>
+          <h3>CSS Coder</h3>
+          <h4>CSS Inc.</h4>
+          <h4>2023 - 2024</h4>
+          <ul>
+            <li>B2B ramp up mission statements for cohesive deliverables CTA.</li> 
+            <li>Reached fluid EOD's for follow up targets and bandwidth proximity with organic pipeline OLA fesh outs.</li> 
+            <li>High level client facing synergy mobile first implementation value creation.</li> 
+            <li>Platform value propositions with dev environment whiteboards.</li> 
+          </ul>
+        </article>
+        <article>
+          <h3>HTML Monkey</h3>
+          <h4>HTML LLC.</h4>
+          <h4>2022 - 2023</h4>
+          <ul>
+            <li>Leveraged gamma plans for mock up EOD's.</li>
+            <li>Transplanted target audiences to next level post launch next step API's.</li>
+            <li>ROI fluid game chager which was prostponed due to responsive behavior.</li>
+            <li>Lean innovation strategic push the envelope usability third party channel quick desk hot link.</li>
+          </ul>
+        </article>
+      </div>
     </section>
 
-    <footer id="contact">
-      <h2>John Wankiewicz</h2>
-      <h4>Web Ninja</h4>
-      <p>
-        <a href="mailto:john.wankiewicz@example.com">john.wankiewicz@example.com</a>
-      </p>
-      <p>
-        <a href="tel:2501234567">250-123-4567</a>
-      </p>
-      <p>
-        <a href="resume.pdf" download>Download Resume</a>
-      </p> 
+    <footer id="contact" class="bg-a">
+      <div class="container">
+        <h2>John Wankiewicz</h2>
+        <h4>Web Ninja</h4>
+        <p>
+          <a href="mailto:john.wankiewicz@example.com">john.wankiewicz@example.com</a><br>
+          <a href="tel:2501234567">250-123-4567</a><br>
+          <a href="resume.pdf" download>Download Resume</a><br> 
+          </p>
+      </div>
     </footer>
 
   </body>
