jQuery Project up

--- a/lighthouse/project_1/index.html
+++ b/lighthouse/project_1/index.html
@@ -42,24 +42,24 @@
     <section id="skills" class="bg-a">
       <div class="container">
         <h2>skills</h2>
-          <p>
-            <span>HTML</span><meter min="1" max="10" value="10">tests</meter><span>100%</span>
-          </p>
-          <p>
-            <span>CSS</span><meter min="1" max="10" value="10">tests</meter><span>100%</span>
-          </p>
-          <p>
-            <span>JavaScript</span><meter min="1" max="10" value="10">tests</meter><span>100%</span>
-          </p>
-          <p>
-            <span>XML</span><meter min="1" max="10" value="10">tests</meter><span>100%</span>
-          </p>
-          <p>
-            <span>SVG</span><meter min="1" max="10" value="10">tests</meter><span>100%</span>
-          </p>
-          <p>
-            <span>jQuery</span><meter min="1" max="10" value="NaN">tests</meter><span>0%</span>
-          </p>
+        <div class="meter">
+          <span>HTML</span><meter min="1" max="10" value="10">tests</meter><span>100%</span>
+        </div>
+        <div class="meter">
+          <span>CSS</span><meter min="1" max="10" value="10">tests</meter><span>100%</span>
+        </div>
+        <div class="meter">
+          <span>JavaScript</span><meter min="1" max="10" value="10">tests</meter><span>100%</span>
+        </div>
+        <div class="meter">
+          <span>XML</span><meter min="1" max="10" value="10">tests</meter><span>100%</span>
+        </div>
+        <div class="meter">
+          <span>SVG</span><meter min="1" max="10" value="10">tests</meter><span>100%</span>
+        </div>
+        <div class="meter">
+          <span>jQuery</span><meter min="1" max="10" value="NaN">tests</meter><span>0%</span>
+        </div>
       </div>
     </section>
 
@@ -122,11 +122,11 @@
           <h2>John Wankiewicz</h2>
           <h4>Web Ninja</h4>
         </div>
-        <p>
+        <div>
           <a href="mailto:john.wankiewicz@example.com">john.wankiewicz@example.com</a><br>
           <a href="tel:2501234567">250-123-4567</a><br>
           <a href="resume.pdf" download>Download Resume</a><br> 
-          </p>
+          </div>
       </div>
     </footer>
 
