Updated singleton class icons

--- a/godot/classes/index.html
+++ b/godot/classes/index.html
@@ -632,26 +632,26 @@
 
     # Singletons
 
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#ARVRServer" target="_blank">ARVRServer</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#AudioServer" target="_blank">AudioServer</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#CameraServer" target="_blank">CameraServer</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#ClassDB" target="_blank">ClassDB</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#Engine" target="_blank">Engine</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#Geometry" target="_blank">Geometry</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#IP" target="_blank">IP</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#Input" target="_blank">Input</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#InputMap" target="_blank">InputMap</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#JSON" target="_blank">JSON</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#Marshalls" target="_blank">Marshalls</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#OS" target="_blank">OS</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#Performance" target="_blank">Performance</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#Physics2DServer" target="_blank">Physics2DServer</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#PhysicsServer" target="_blank">PhysicsServer</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#ProjectSettings" target="_blank">ProjectSettings</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#ResourceLoader" target="_blank">ResourceLoader</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#ResourceSarver" target="_blank">ResourceSarver</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#TranslationServer" target="_blank">TranslationServer</a>
-    <img src="icons/icon_arrow_right.png"> <a href="../api/#VisualServer" target="_blank">VisualServer</a>
+    <img src="icons/icon_object.png"> <a href="../api/#ARVRServer" target="_blank">ARVRServer</a>
+    <img src="icons/icon_object.png"> <a href="../api/#AudioServer" target="_blank">AudioServer</a>
+    <img src="icons/icon_object.png"> <a href="../api/#CameraServer" target="_blank">CameraServer</a>
+    <img src="icons/icon_object.png"> <a href="../api/#ClassDB" target="_blank">ClassDB</a>
+    <img src="icons/icon_object.png"> <a href="../api/#Engine" target="_blank">Engine</a>
+    <img src="icons/icon_object.png"> <a href="../api/#Geometry" target="_blank">Geometry</a>
+    <img src="icons/icon_object.png"> <a href="../api/#IP" target="_blank">IP</a>
+    <img src="icons/icon_object.png"> <a href="../api/#Input" target="_blank">Input</a>
+    <img src="icons/icon_object.png"> <a href="../api/#InputMap" target="_blank">InputMap</a>
+    <img src="icons/icon_object.png"> <a href="../api/#JSON" target="_blank">JSON</a>
+    <img src="icons/icon_object.png"> <a href="../api/#Marshalls" target="_blank">Marshalls</a>
+    <img src="icons/icon_object.png"> <a href="../api/#OS" target="_blank">OS</a>
+    <img src="icons/icon_object.png"> <a href="../api/#Performance" target="_blank">Performance</a>
+    <img src="icons/icon_object.png"> <a href="../api/#Physics2DServer" target="_blank">Physics2DServer</a>
+    <img src="icons/icon_object.png"> <a href="../api/#PhysicsServer" target="_blank">PhysicsServer</a>
+    <img src="icons/icon_object.png"> <a href="../api/#ProjectSettings" target="_blank">ProjectSettings</a>
+    <img src="icons/icon_object.png"> <a href="../api/#ResourceLoader" target="_blank">ResourceLoader</a>
+    <img src="icons/icon_object.png"> <a href="../api/#ResourceSarver" target="_blank">ResourceSarver</a>
+    <img src="icons/icon_object.png"> <a href="../api/#TranslationServer" target="_blank">TranslationServer</a>
+    <img src="icons/icon_object.png"> <a href="../api/#VisualServer" target="_blank">VisualServer</a>
 
 </pre>
 </body>
